syntax = "proto3";
//import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
//import "MemberService.proto";
import "SpecificDateTime.proto";
option java_multiple_files = true;
option csharp_namespace = "GrpcNjordClient.MemberAvailability";
package com.sep3yg9.njorddata.grpc.protobuf.MemberAvailability;

message CreateMemberAvailability{
  int32 assignedmember = 1;
  int32 dayofweek = 2;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime starthour = 3;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime endhour = 4;
}

message UpdatingMemberAvailability{
  int32 id = 1;
  int32 dayofweek = 2;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime starthour = 3;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime endhour = 4;
}

message MemberAvailabilityGrpc{
  int32 id = 1;
  int32 assignedmember = 2;
  int32 dayofweek = 3;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime starthour = 4;
  com.sep3yg9.njorddata.grpc.protobuf.specificdatetime.SpecificDateTime endhour = 5;
}
